--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "import:tours": "node server.js --import",
+    "delete:tours": "node server.js --delete"
   },
   "author": "El Alami Idriss",
   "license": "ISC",
